--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root{
-    --game-height: 430px
+    --game-height: 457.6px
 }
 
 *{
@@ -56,8 +56,11 @@ main{
     margin: 0px 40px;
     background-color: rgb(119, 119, 119);
     padding: 50px 40px 0px;
-    display: flex;
     height: -webkit-fill-available;
+}
+
+#page1{
+    display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
@@ -173,4 +176,21 @@ section.player-info{
 .pgn-fen button:hover{
     color: #666;
     cursor: pointer;
+}
+
+#heading-buttons a{
+    color: whitesmoke;
+    text-decoration: none;
+    outline: none;
+}
+a{
+    outline: none;
+}
+
+/* homepage */
+#page2{
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
