--- a/chess.css
+++ b/chess.css
@@ -2,8 +2,8 @@
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(8, 1fr);
-    width: 400px;
-    height: 400px;
+    max-width: 400px;
+    max-height: 400px;
     border: 3px solid black;
     padding: 1px;
     /* invert the content upside down, but the sides have to remain in the same columns */
