--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ a{
 }
 
 /* homepage */
-#page2{
+#pageI, #page2{
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -211,7 +211,7 @@ footer{
     position: fixed;
     bottom: 0;
     left: 0;
-    background-color: #353535;
+    background-color: #353535cb;
     color: whitesmoke;
     width: 100%;
     /* font-size: 20px; */
@@ -236,12 +236,12 @@ footer a{
     transition: 0.5s;
 }
 #credits-footer.opened{
-    bottom: 28px;
+    bottom: 28.3px;
 }
 
 footer button{
     padding: 10px 20px;
-    background-color: #333;
+    background-color: transparent;
     color: whitesmoke;
     border: none;
     cursor: pointer;
@@ -250,4 +250,74 @@ footer button{
 }
 footer button:hover{
     background-color: #555;
+}
+
+img{
+    user-select: none;
+    -webkit-user-drag: none;
+}
+
+
+#new-game{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+#new-game *{
+    margin: 5px;
+}
+
+.new.game{
+    padding: 10px 20px 15px;
+}
+
+.new-game-parts{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.new-game-parts input{
+    margin-left: 10px;
+    background-color: transparent;
+    border: #555 solid 1px;
+    font-size: inherit;
+    color: whitesmoke;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.new.game button{
+    background-color: #333;
+    color: whitesmoke;
+    border: none;
+    cursor: pointer;
+    padding: 7px 12px;
+    border-radius: 5px;
+    transition: 0.5s;
+    font-size: medium;
+}
+.new.game button:hover{
+    background-color: #555;
+}
+
+input[type="checkbox"]{
+    width: 20px;
+    height: 20px;
+    background-color: #333;
+    border: #555 solid 1px;
+    cursor: pointer;
+    appearance: none;
+}
+
+input[type="checkbox"]:checked{
+    background-color: #555fff;
+}
+
+#pageI{
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
 }
