--- a/style.css
+++ b/style.css
@@ -349,22 +349,26 @@ section#uvod-obsah{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    flex-direction: column;
 }
 
 #obsah ul{
     text-align: left;
-    font-size: 20px;
+    font-size: 18px;
 }
 #obsah a{
-    color: black;
+    color: white;
     text-decoration: none;
 }
 #obsah a:hover{
-    color: #333;
+    color: #aaa;
 }
 #obsah li{
     margin: 10px 0;
 }
 #obsah{
     margin-right: 20px;
+}
+#obsah-box{
+    padding: 12px 15px;
 }
