--- a/style.css
+++ b/style.css
@@ -70,7 +70,12 @@ body{
     /* background-color: #333; */
     background-color: rgb(119, 119, 119);
     height: -webkit-fill-available;
-    overflow: auto;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+body::-webkit-scrollbar{
+    display: none;
 }
 
 html{
@@ -202,6 +207,7 @@ a{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 #piece-gain{
@@ -318,15 +324,15 @@ input[type="checkbox"]:checked{
 }
 
 #pageI{
-    align-items: center;
-    justify-content: center;
     margin-top: 20px;
+    padding-top: 42px;
 }
 
 /* index html */
 #pageI img{
     max-height: 79vh;
     margin-bottom: 40px;
+    max-width: 100vw;
 }
 
 section#text h1{
@@ -371,4 +377,28 @@ section#uvod-obsah{
 }
 #obsah-box{
     padding: 12px 15px;
+}
+
+#page2 ul{
+    list-style-type: none;
+    padding: 0 10px 10px;
+    margin: 0;
+    display: inline-block;
+}
+#page2 ul#obsah-tutorial{
+    border: solid 1px black;
+}
+#page2 li{
+    margin: 5px 0 0;
+}
+#page2 a{
+    text-decoration: none;
+    color: #05005a;
+    font-size: 17px;
+}
+#page2 a:hover{
+    color: #555bbb;
+}
+#page2 ul h2{
+    margin-top: 15px;
 }
